--- a/Ebackend/template/profile.html
+++ b/Ebackend/template/profile.html
@@ -29,7 +29,7 @@
                                 <!-- edit product elements-> displays and hides when the icon above is toggled -->
                                 <div class="edits">
                                     <div class="optionz remove-prod">Remove Product</div>
-                                    <div class="optionz">Edit Product</div>
+                                    <div class="optionz edit-prod">Edit Product</div>
                                 </div>
                                
                                 <!-- form for product removal -->
