--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../static/css/style.css" type="text/css">
         <link rel="stylesheet" href="../static/css/signin_nd_up.css">
         <link rel="icon" type="img/jpg" href="">
+        <link rel="stylesheet" type="text/css" href="../static/css/media_queries.css">
         <script src="https://kit.fontawesome.com/c676ebde69.js" crossorigin="anonymous"></script>
     </head>
     <body>
