--- a/Ebackend/template/checkout.html
+++ b/Ebackend/template/checkout.html
@@ -95,6 +95,9 @@
                     </div>
                 </div>
             </div>
+            <div class="total">
+                Total:
+            </div>
         {%else%}
             {%if retrieved_products%}
                 <h3 id="your-order">All Items in Your Cart</h3>
