--- a/Ebackend/template/payment.html
+++ b/Ebackend/template/payment.html
@@ -10,3 +10,11 @@ Payment Gateway
     {%block logout%}
     {%endblock%}
 {%endif%}
+
+{%block content%}
+    <div class="pay-parent">
+       <h5 class="pay-quest">Would you like to pay through a bank transfer? click <i>here</i> to see account details.</h5> 
+
+       <h2>Payment Platform API</h2>
+    </div>
+{%endblock%}
