--- a/Ebackend/static/css/style.css
+++ b/Ebackend/static/css/style.css
@@ -15,8 +15,8 @@
 /* header section */
 header{
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
+    flex-flow: row nowrap;
+    justify-content: space-between;
     align-items: center;
     position:fixed;
     top:0;
@@ -25,6 +25,13 @@ header{
     border-bottom:solid black 2px;
     background-color:white;
     z-index: 1000;
+    padding: 10px;
+}
+ .laptop-view{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .logo > a{
@@ -151,6 +158,7 @@ body{
     display:flex;
     flex-direction: column;
     margin-top: 70px;
+    width: 100%;
     background-image:url('../img/E-comBackground.png');
     background-size:cover;
     background-position:center;
