--- a/Ebackend/static/css/media_queries.css
+++ b/Ebackend/static/css/media_queries.css
@@ -11,7 +11,7 @@
         width: 100%;
     }
 
-    header > .laptop-view{
+    .laptop-view{
         display: none;
     }
 
@@ -30,7 +30,12 @@
         margin: 2px;
     }
 
+    /* container of all products by vendors */
     .vendor-products{
-        width: 100%;
+        width: 80%;
+    }
+
+    .vendor-products> section{
+        grid-template-columns: repeat(2, 1fr);
     }
 }
