--- a/Ebackend/static/css/media_queries.css
+++ b/Ebackend/static/css/media_queries.css
@@ -4,7 +4,7 @@
     }
 
     html{
-        width: 100vw;
+        width: 100%;
     }
     
     .hero-section, .items, .mordern-cont{
@@ -32,10 +32,14 @@
 
     /* container of all products by vendors */
     .vendor-products{
-        width: 80%;
+        width: 100%;
     }
 
     .vendor-products> section{
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns:1fr;
+        gap: 10px;
+    }
+    .product>img{
+        width: 100%;
     }
 }
