--- a/Ebackend/static/css/media_queries.css
+++ b/Ebackend/static/css/media_queries.css
@@ -29,15 +29,16 @@
         background-color: lightblue;
         margin: 2px;
     }
-
-    /* container of all products by vendors */
-    .vendor-products{
-        width: 100%;
+    /* hero section and items */
+    .hero-section, .items{
+        justify-content:space-between;
     }
-
+    /* container of all products by vendors */
     .vendor-products> section{
         grid-template-columns:1fr;
         gap: 10px;
+        flex: 1 1 auto;
+        margin: auto;
     }
     .product>img{
         width: 100%;
