--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -31,7 +31,7 @@
             </div>
             <!-- icon -->
             <div class="icon">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="search" name="search-term" class="search-box"><i class="fa-solid fa-magnifying-glass"></i>
                 <div class="cart-item">
                     <a href="/checkout/" class="checkout"><i class="fa-solid fa-cart-shopping"></i><div class="cart-count">{%if session_data%}{{session_data}}{%endif%}</div></a>
                 </div>
