--- a/Ebackend/template/payment.html
+++ b/Ebackend/template/payment.html
@@ -3,6 +3,8 @@
 Payment Gateway
 {%endblock%}
 
+{%block search%}{%endblock%}
+
 {%if user.is_authenticated%}<!-- trying to display 'login' logout button. base on user authentication status-->
     {%block login%}
     {%endblock%}
