--- a/Ebackend/template/profile.html
+++ b/Ebackend/template/profile.html
@@ -3,6 +3,7 @@
 {%block title%}profile{%endblock%}
 
 {%block login%} {%endblock%}
+{%block search%}{%endblock%}
 
 {%block content%}
     {%if msgs%}
