--- a/Ebackend/static/css/media_queries.css
+++ b/Ebackend/static/css/media_queries.css
@@ -64,7 +64,18 @@
     .profile-parent{
         margin-top: 30%;
     }
+    .profile-hero{
+        width: 100%;
+        height: 100%;
+    }
+    .profile-pic{
+        width:100%;
+        height:100%;
+    }
     .your_products{
         grid-template-columns: repeat(2, 1fr);
+    }
+    .cart-order{
+        margin-top: 10%;
     }
 }
