--- a/Ebackend/static/css/media_queries.css
+++ b/Ebackend/static/css/media_queries.css
@@ -74,7 +74,7 @@
     .your_products{
         grid-template-columns: repeat(2, 1fr);
     }
-    .cart-order{
-        margin-top: 10%;
+    #cart-head-text{
+        margin-top: 30%;
     }
 }
