--- a/Ebackend/template/index.html
+++ b/Ebackend/template/index.html
@@ -10,7 +10,7 @@
             <h1 class="mordern-txt">
                 Mordern Child Furniture
             </h1>
-            <img src="../static/img/sofa1.jpg" alt="furniture">
+            <img src="../static/img/sofa1.jpg" alt="furniture" class="modern-img">
             <span class="mordern-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, aut!</span>
             <h3 id="price">$50</h3>
             <!-- submitting form -->
@@ -42,7 +42,7 @@
         </div>
 
         <div class="big-img">
-            <img src="../static/img/sofa2.jpg" alt="Child sofa">
+            <img src="../static/img/sofa2.jpg" alt="Child sofa" id="big-img">
             <p class="how-it-works" onmouseover="howItWorks()">
                 How it works?
                 <p class="detail">
