--- a/Ebackend/static/css/media_queries.css
+++ b/Ebackend/static/css/media_queries.css
@@ -7,6 +7,8 @@
     .laptop-view{
         display: none;
     }
+    /* mobile-view */
+    
     .hamburger{
         display: flex;
         flex-direction: column;
