--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -14,6 +14,7 @@
     <body>
         <header>
             <div class="logo"><a href="{%url 'home'%}">B<span id="chair-txt">chair</span></a></div>
+            <!-- larg screen -->
             <div class="laptop-view">
                 <ul class="nav-list">
                     <li><a href="#mattress">Mattress</a></li>
@@ -22,6 +23,13 @@
                     <li><a href="#kid-room">Kid Room</a></li>
                 </ul>
             </div>
+            <!-- mobile -->
+            <ul class="nav-list-mobile">
+                <li><a href="#mattress">Mattress</a></li>
+                <li><a href="#bedroom">Bedroom</a></li>
+                <li><a href="#living-room">Living Room</a></li>
+                <li><a href="#kid-room">Kid Room</a></li>
+            </ul>
              <!-- profile link -->
              <a href="{%url 'profile'%}" class="profile"><i class="fa-solid fa-image-portrait"></i></a>
             <!-- login logout buttons -->
@@ -43,13 +51,6 @@
                 <div></div>
                 <div></div>
             </div>
-            <!-- mobile -->
-        <ul class="nav-list-mobile mobile-list">
-            <li><a href="">Mattress</a></li>
-            <li><a href="">Bedroom</a></li>
-            <li><a href="">Living Room</a></li>
-            <li><a href="">Kid Room</a></li>
-        </ul>
         </header>
         {%block content%}
 
