--- a/Ebackend/static/css/media_queries.css
+++ b/Ebackend/static/css/media_queries.css
@@ -97,6 +97,9 @@
         margin-left: 8px;
     }
 
+    .search-box{
+        width: 80px;
+    }
 
     /* actual profile styling starts from here */
     .message{/*flash messages */
