--- a/Ebackend/template/signup.html
+++ b/Ebackend/template/signup.html
@@ -28,7 +28,7 @@
     </div>
     
     <div class="options input-cont">
-        <label for="option">who are you?*</label>
+        <label for="option" id="who-are-you">who are you?*</label>
         <select name="usertype" id="usertype" class="option"  required>
             <option value="vendor">vendor</option>
             <option value="buyer">buyer</option>
