--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -78,5 +78,6 @@
         </div>
         <script src="../static/js/index.js"></script>
         <script src="../static/js/func.js"></script>
+        <script src="../static/js/search.js"></script>
     </footer>
 </html>
