--- a/Ebackend/template/search_product.html
+++ b/Ebackend/template/search_product.html
@@ -1,7 +1,44 @@
 {%extends 'base.html'%}
-
+{% block search%} {%endblock%}
+{%block login%} {%endblock%}
+{%block logout%} {%endblock%}
 {%block content%}
 <div class="search-items">
-    
+    {%for product in search_results%}
+        <div class="product-cont" id="product">
+            <div class="product">
+                <img src="{{product.product_image.url}}" alt="no product">
+                <h4 id="product-name">{{product.product_name}}</h4>
+                <p class="aboutproduct">{%if product.description%}{{product.description}}{%endif%}</p>
+                <h5 id="price">Price: ${{product.price}}</h5>
+                <h5 id="prod-status">Status:{%if product.sold%} Sold{%else%} In stock{%endif%}</h5>
+                <div class="buy-nd-cart">
+                    <form action="{%url 'checkout'%}" method="get" class="desc-btn" enctype="multipart/form-data">
+                        <input type="hidden" name="product_img" value="{{product.product_image}}" style="display: none;">
+                        <input type="hidden" name="product_id" value="{{product.id}}" style="display: none;" >
+                        <input type="hidden" name="price" value="{{product.price}}" style="display: none;" >
+                        <input type="hidden" name="product_name" value="{{product.product_name}}" style="display: none;" >
+                        <input type="submit" class="buy" value="Buy Now">
+                    </form>
+                    {# form for data when add to cart is triggered #}
+                    <form action="" method="post" class="desc-btn cart-form" enctype="multipart/form-data" style="display: none;">
+                        {%csrf_token%}
+                        <input type="hidden" name="product_img" value="{{product.product_image}}" style="display: none;">
+                        <input type="hidden" name="product_id" value="{{product.id}}" style="display: none;" >
+                        <input type="hidden" name="price" value="{{product.price}}" style="display: none;" >
+                        <input type="hidden" name="product_name" value="{{product.product_name}}" style="display: none;" >
+                    </form>
+                    <div class="add-to-cart">
+                        Add to cart
+                        <p class="cart-detail">
+                            To check items you add to your cart, click on CART icon
+                            on the navigation menu above.
+                        </p>
+                    </div>
+                    <div class="remove-cart">Remove item</div>
+                </div>
+            </div>
+        </div>
+    {%endfor%}
 </div>
 {%endblock%}
