--- a/Ebackend/static/css/signin_nd_up.css
+++ b/Ebackend/static/css/signin_nd_up.css
@@ -142,6 +142,10 @@ div.sign-up-guide{
     border-radius:15px;
 }
 
+.search-info{
+    text-align: center;
+}
+
 .message{
     margin-top: 10%;
     margin-bottom:-9%;
