--- a/Ebackend/static/css/media_queries.css
+++ b/Ebackend/static/css/media_queries.css
@@ -140,8 +140,8 @@
 
     .search-items{
         margin-top: 28%;
-        margin-right: 7%;
-        margin-left: 7%;
+        margin-right: 11%;
+        /* margin-left: 7%; */
     }
     
 }
