modified some functionalities, including a single css change

--- a/Ebackend/static/css/media_queries.css
+++ b/Ebackend/static/css/media_queries.css
@@ -143,5 +143,9 @@
         margin-right: 11%;
         /* margin-left: 7%; */
     }
+
+    .item-detail{/*one of the detail of an item, with the lorem ipsium text*/
+        text-align: center;
+    }
     
 }
