--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -84,5 +84,6 @@
         <script src="../static/js/index.js"></script>
         <script src="../static/js/func.js"></script>
         <script src="../static/js/search.js"></script>
+        <script src="../static/js/accDisp.js"></script>
     </footer>
 </html>
