--- a/Ebackend/template/profile.html
+++ b/Ebackend/template/profile.html
@@ -18,6 +18,22 @@
             <div class="profile-hero">
                 <img src="{{name.vendorprofile.profile_img.url}}" class="profile-pic" alt="profile-pic" type="img/jpg">
                 <h4 class="name">{{name}}</h4>
+                <!-- profile update here -->
+                <div class="update-account-details" id="update-acc">
+                    <p id="update-account-txt">Settings <i class="fa-solid fa-angle-down settings-tog"></i></p>
+                    <form action="{%url 'update account'%}" id="acc-update-form" method="post">
+                        <div class="setting-info">Update your info below.</div>
+                        {%csrf_token%}
+                        <label for="update-username"><p>Username:</p>
+                            <input type="text" name="updated-name" id="updated-name">
+                        </label>
+                        <label for="update-username" id="update-pix-label">
+                            <p>New Photo:</p>
+                            <input type="file" name="updated-picture" id="updated-picture" accept="image/*">
+                        </label>
+                        <input type="submit" name="submit" id="submit-update">
+                    </form>
+                </div>
             </div>
             <!-- current products -->
             <div class="product-flex">
@@ -86,6 +102,21 @@
         <div class="profile-hero">
             <img src="{{name.buyerprofile.profile_img.url}}" class="profile-pic" alt="profile-pic" type="img/jpg">
             <h4 class="name">{{name}}</h4>
+            <!-- profile update here -->
+            <div class="update-account-details" id="update-acc">
+                <p id="update-account-txt">Settings<i class="fa-solid fa-angle-down settings-tog"></i></p>
+                <form action="update-acc/" id="acc-update-form" method="post">
+                    <div class="setting-info">Update your info below.</div>
+                    {%csrf_token%}
+                    <label for="update-username">New Username:
+                        <input type="text" name="updated-name" id="updated-name">
+                    </label>
+                    <label for="update-username">New Photo:
+                        <input type="file" name="updated-picture" id="updated-picture" accept="image/*">
+                    </label>
+                    <input type="submit" name="submit" id="submit-update">
+                </form>
+            </div>
         </div>
         {%endif%}
     </div>
