--- a/Ebackend/static/css/signin_nd_up.css
+++ b/Ebackend/static/css/signin_nd_up.css
@@ -113,6 +113,8 @@ div.sign-up-guide{
 }
 
 .success{
+    display: flex;
+    justify-content: space-between;
     margin:auto;
     text-align: center;
     width:fit-content;
