--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="../static/css/media_queries.css">
         <script src="https://kit.fontawesome.com/c676ebde69.js" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body class="body">
         <header>
             <div class="logo"><a href="{%url 'home'%}">B<span id="chair-txt">chair</span></a></div>
             <!-- larg screen -->
