--- a/Ebackend/static/css/signin_nd_up.css
+++ b/Ebackend/static/css/signin_nd_up.css
@@ -114,8 +114,8 @@ div.sign-up-guide{
 
 .success, .info, .error{
     display: flex;
-    justify-content: space-between;
-    margin-top:20%;
+    justify-content: center;
+    margin-top:10%;
     text-align: center;
     width:fit-content;
     padding:5px;
